--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "geolib": "^2.0.24",
     "i": "^0.3.6",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "npm": "^6.6.0",
     "react": "^16.7.0",
     "react-click-n-hold": "^1.0.7",
