--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "classnames": "^2.2.6",
+    "geolib": "^2.0.24",
     "i": "^0.3.6",
     "jwt-decode": "^2.2.0",
     "npm": "^6.6.0",
