--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
